fix: popup input fixes, photo optimization, JS script fixes

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,13 +3,12 @@
   max-width: 320px;
   padding-top: 28px;
   margin: 0 auto;
-  border-bottom: solid 1px #545454;
+  border-bottom: 1px solid rgba(54, 54, 54, 0.7);
 }
 
 @media screen and (min-width: 768px) {
   .header {
     max-width: 768px;
-    width: 100%;
     margin: 0 auto;
     padding-top: 45px;
   }
@@ -18,7 +17,6 @@
 @media screen and (min-width: 1024px) {
   .header {
     max-width: 880px;
-    width: 100%;
 
   }
 }
