--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -13,5 +13,7 @@
 @media screen and (min-width: 1280px) {
   .footer__copyright {
     margin: 66px auto 60px;
+    font-size: 18px;
+    line-height: 22px;
   }
 }
