--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,11 +1,13 @@
-.popup__profile-form {
-  margin: 0 auto;
+.popup__form {
+  margin: 75px auto 25px;
   max-width: 238px;
   padding: 0;
 }
 
 @media screen and (min-width: 768px) {
-  .popup__profile-form {
+  .popup__form {
     max-width: 358px;
+    margin: 54px auto 37px;
   }
 }
+
