--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,21 +1,28 @@
-.popup__profile-title {
+.popup__input {
   border: 0;
   padding: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  max-width: 238px;
   width: 100%;
-  margin: 75px auto 30px;
+  margin: 0 auto 30px;
   font-family: "Inter", Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
   line-height: 17px;
   font-weight: normal;
+}
 
+.popup__input:last-of-type {
+  margin: 0 auto 45px;
 }
 
 @media screen and (min-width: 768px) {
-  .popup__profile-title {
+  .popup__input {
     max-width: 358px;
-    margin: 54px auto 30px;
+  }
+
+  .popup__input:last-of-type {
+    margin: 0 auto 48px;
   }
 }
