--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -11,7 +11,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   border: none;
-  margin: 0 auto 25px;
+  margin: 0 auto;
   transition: opacity .2s ease-in-out;
   cursor: pointer;
   padding: 0;
