feat: javascript function

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,5 +7,10 @@
   left: 0;
   justify-content: center;
   align-items: center;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.2s linear;
 }
+
+
