--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,8 @@
 @import url(../blocks/photo-grid/__container/photo-grid__container.css);
 @import url(../blocks/photo-grid/__title/photo-grid__title.css);
 @import url(../blocks/photo-grid/__like-button/photo-grid__like-button.css);
+@import url(../blocks/photo-grid/__like-button/_active/photo-grid__like-button_active.css);
+@import url(../blocks/photo-grid/__delete-button/photo-grid__delete-button.css);
 
 /* FOOTER */
 @import url(../blocks/footer/footer.css);
@@ -45,4 +47,7 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
-
+@import url(../blocks/popup/_image-fullscreen/popup_image-fullscreen.css);
+@import url(../blocks/popup/__image-fullscreen-text/popup__image-fullscreen-text.css);
+@import url(../blocks/popup/__image-container/popup__image-container.css);
+@import url(../blocks/popup/__image/popup__image.css);
