--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -11,10 +11,22 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   border: none;
-  margin: 0 auto;
+  margin: 30px auto 0;
   transition: opacity .2s ease-in-out;
   cursor: pointer;
   padding: 0;
+}
+
+.popup__submit-button:disabled {
+  opacity: 0.2;
+  border: 1px solid #000;
+  background-color: transparent;
+  color: #000;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .popup__submit-button:hover {
