--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,9 +1,13 @@
 .profile__avatar {
-  width: 120px;
-  height: 120px;
+  width: 100%;
+  height: 100%;
   margin: 0 0 26px 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
 }
-
 
 @media screen and (min-width: 1024px) {
   .profile__avatar {
