--- a/main.css
+++ b/main.css
@@ -6,7 +6,9 @@
 .main{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-family:Inter,Arial,Helvetica,sans-serif}
 .profile{align-items:center;display:flex;flex-direction:column;margin:42px auto 36px;max-width:282px;padding:0;width:100%}@media screen and (min-width:1024px){.profile{flex-direction:row;margin:40px auto 50px;max-width:880px}}
 .profile__card{margin:0 auto}@media screen and (min-width:1024px){.profile__card{margin:0 auto 0 30px}}
-.profile__avatar{height:120px;margin:0 0 26px;width:120px}@media screen and (min-width:1024px){.profile__avatar{margin:0}}
+.profile__avatar-container{height:120px;position:relative;width:120px}
+.profile__avatar{border-radius:50%;height:100%;margin:0 0 26px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;width:100%}@media screen and (min-width:1024px){.profile__avatar{margin:0}}
+.profile__avatar-overlay{height:120px;left:0;opacity:0;position:absolute;top:0;width:120px}.profile__avatar-overlay:hover{background-color:rgba(0,0,0,.8);background-image:url(6e1611c47804600866b5.svg);background-position:50%;background-repeat:no-repeat;background-size:26px;cursor:pointer;opacity:1;transition:opacity .2s ease-in-out}
 .profile__info{align-items:baseline;display:flex;justify-content:center;margin:0 auto 14px}@media screen and (min-width:1024px){.profile__info{margin:0 auto 16px}}
 .profile__title{color:#fff;font-size:27px;font-style:normal;font-weight:500;line-height:33px;margin:0;max-width:190px;overflow:hidden;text-align:center;text-overflow:ellipsis;white-space:nowrap;width:100%}@media screen and (min-width:1024px){.profile__title{font-size:42px;line-height:48px;max-width:294px}}
 .profile__edit-button{background-color:transparent;background-image:url(6e1611c47804600866b5.svg);background-position:50%;background-repeat:no-repeat;background-size:auto;border:1px solid #fff;cursor:pointer;height:18px;margin:0 0 0 10px;padding:0;transition:opacity .2s ease-in-out;width:18px}.profile__edit-button:hover{opacity:.6}@media screen and (min-width:1024px){.profile__edit-button{height:24px;margin:0 0 0 18px;width:24px}}
@@ -18,8 +20,11 @@
 .photo-grid__container{align-items:center;display:flex;justify-content:space-between;margin:0 auto;max-width:246px;padding:25px 0 31px;width:100%}
 .photo-grid__title{color:#000;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0;max-width:190px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}
 .photo-grid__like-button{background-color:transparent;background-image:url(87ed371465c7a6a1cd01.svg);background-position:50%;background-repeat:no-repeat;background-size:cover;border:none;cursor:pointer;height:19px;margin:0;padding:0;transition:opacity .2s ease-in-out;width:22px}.photo-grid__like-button:hover{opacity:.6}
+.photo-grid__like-container{align-items:center;display:flex;flex-direction:column;margin:0}
+.photo-grid__like-counter{color:#000;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:0}
 .photo-grid__like-button_active{background-image:url(fe17a515669479b1e649.svg)}
 .photo-grid__delete-button{background-color:transparent;background-image:url(cbc09a894bdd4c956365.svg);background-repeat:no-repeat;border:none;cursor:pointer;height:19px;margin:0;padding:0;position:absolute;right:15px;top:18px;transition:opacity .2s ease-in-out;width:18px}.photo-grid__delete-button:hover{opacity:.6}
+.photo-grid__delete-button_hidden{display:none}
 .footer{margin:0 auto;max-width:282px;width:90%}@media screen and (min-width:768px){.footer{max-width:768px}}@media screen and (min-width:1024px){.footer{max-width:880px;width:100%}}
 .footer__copyright{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;color:#545454;font-family:Inter,Arial,Helvetica,sans-serif;font-size:14px;font-style:normal;font-weight:400;line-height:17px;margin:48px 0 36px}@media screen and (min-width:1280px){.footer__copyright{font-size:18px;line-height:22px;margin:66px auto 60px}}
 .popup{align-items:center;background-color:rgb(0,0,0,.5);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:visibility 0s,opacity .2s linear;visibility:hidden;width:100%}
@@ -30,6 +35,7 @@
 .popup__section{margin:0 0 35px;position:relative}
 .popup__input{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;border:0;border-bottom:1px solid rgba(0,0,0,.2);box-sizing:border-box;font-family:Inter,Arial,Helvetica,sans-serif;font-size:14px;font-weight:400;line-height:17px;margin:0 auto;max-width:238px;padding:0;width:100%}@media screen and (min-width:768px){.popup__input{max-width:358px}}
 .popup__submit-button{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;background-color:#000;border:none;border-radius:2px;color:#fff;cursor:pointer;font-family:Inter,Arial,Helvetica,sans-serif;font-size:14px;font-weight:400;height:46px;line-height:17px;margin:30px auto 0;padding:0;transition:opacity .2s ease-in-out;width:238px}.popup__submit-button:disabled{background-color:transparent;border:1px solid #000;color:#000;opacity:.2;pointer-events:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.popup__submit-button:hover{opacity:.8}@media screen and (min-width:768px){.popup__submit-button{font-size:18px;height:50px;line-height:22px;width:358px}}
+.popup__submit-button_confirm-delete{margin:38px auto 36px}
 .popup__submit-button_disabled{background-color:transparent;border:1px solid #000;color:#000;opacity:.2;pointer-events:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
 .popup_opened{opacity:1;visibility:visible}
 .popup_image-fullscreen{background-color:rgba(0,0,0,.8)}
